--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
   <body>
     <div class="container">
       <ul class="comments"></ul>
-      <div class="add-form">
-        <input type="text" class="add-form-name" placeholder="Введите ваше имя" />
-        <textarea type="textarea" class="add-form-text" placeholder="Введите ваш коментарий" rows="4"></textarea>
-        <div class="add-form-row">
-          <button id="delete-form-button" class="add-form-button">Удалить последний комментарий</button>
-          <button id="add-form-button" class="add-form-button">Написать</button>
-        </div>
-      </div>
+      <div class="add-form"></div>
     </div>
   </body>
 
